fixed aws media files, added rows to improve spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 p {
-	font-size: 1.2rem;
+	font-size: 1.05rem;
 }
 
 .row {
